# lexiquery

./: .gitignore  CHANGELOG.md  LANGUAGE_MANUAL.md  README.md  pyproject.toml
lexiquery/: __init__.py  astnodes.py  evaluator.py  parser.py  tokenizer.py
prd/: prd.md
src/lexiquery/: __init__.py  astnodes.py  core.py  evaluator.py  exceptions.py  grammar.py  parser.py  tokenizer.py  utils.py
tests/: test_core.py  test_new_ops.py
